scripts/nullaway/original/url9a01f43c15_poragchowdhury_securitygame_tgz-pJ8-securitygame_GameMasterJ8.txt
../original/url9a01f43c15_poragchowdhury_securitygame_tgz-pJ8-securitygame_GameMasterJ8/src/securitygame/Attacker.java:43: error: [NullAway] initializer method does not guarantee @NonNull fields ah (line 14), graph (line 16), netVisible (line 17), capturedNodes (line 18), availableNodes (line 19) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Attacker(String attackerName){
           ^
    (see http://t.uber.com/nullaway )
../original/url9a01f43c15_poragchowdhury_securitygame_tgz-pJ8-securitygame_GameMasterJ8/src/securitygame/AttackerHelper.java:33: error: [NullAway] initializer method does not guarantee @NonNull field apw (line 21) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public AttackerHelper(Network net, int budget, String attackerName, String defenderName, String graphName)
           ^
    (see http://t.uber.com/nullaway )
../original/url9a01f43c15_poragchowdhury_securitygame_tgz-pJ8-securitygame_GameMasterJ8/src/securitygame/Network.java:21: error: [NullAway] initializer method does not guarantee @NonNull field fullGraphName (line 18) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Network(){}
	       ^
    (see http://t.uber.com/nullaway )
../original/url9a01f43c15_poragchowdhury_securitygame_tgz-pJ8-securitygame_GameMasterJ8/src/securitygame/Network.java:87: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return null;
			^
    (see http://t.uber.com/nullaway )
../original/url9a01f43c15_poragchowdhury_securitygame_tgz-pJ8-securitygame_GameMasterJ8/src/securitygame/Network.java:93: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../original/url9a01f43c15_poragchowdhury_securitygame_tgz-pJ8-securitygame_GameMasterJ8/src/securitygame/DefenderHelper.java:39: error: [NullAway] initializer method does not guarantee @NonNull field pw (line 30) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public DefenderHelper(Network network, String graphFile, String defenderName)
           ^
    (see http://t.uber.com/nullaway )
../original/url9a01f43c15_poragchowdhury_securitygame_tgz-pJ8-securitygame_GameMasterJ8/src/securitygame/DefenderHelper.java:59: error: [NullAway] initializer method does not guarantee @NonNull field pw (line 30) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public DefenderHelper(String defenderName, String graphFile){
           ^
    (see http://t.uber.com/nullaway )
../original/url9a01f43c15_poragchowdhury_securitygame_tgz-pJ8-securitygame_GameMasterJ8/src/securitygame/AttackerMonitor.java:75: error: [NullAway] read of @NonNull field history before initialization
        history.close();
        ^
    (see http://t.uber.com/nullaway )
../original/url9a01f43c15_poragchowdhury_securitygame_tgz-pJ8-securitygame_GameMasterJ8/src/securitygame/GameMaster.java:172: error: [NullAway] returning @Nullable expression from method with @NonNull return type
				return null;
				^
    (see http://t.uber.com/nullaway )
../original/url9a01f43c15_poragchowdhury_securitygame_tgz-pJ8-securitygame_GameMasterJ8/src/securitygame/Parser.java:83: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
10 errors
